--- a/src/pages/DevicePages/AddDevice/AddDevice.css
+++ b/src/pages/DevicePages/AddDevice/AddDevice.css
@@ -1,4 +1,4 @@
-.device-stepper-container {
+.dev-step-contn {
   display: flex;
   width: 100%;
   height: 100%;
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: 1rem 0.5rem;
 }
-.device-stepper {
+.dev-step {
   width: 100%;
   height: 100%;
   display: flex;
@@ -15,17 +15,18 @@
   padding: 1rem;
   border-radius: 6px;
 }
-.device-stepper .content-container {
+.dev-step-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
   height: 90%;
   max-height: 480px;
+  overflow: auto;
   border-radius: 6px;
   border: var(--dashed-border-basic);
 }
-.device-stepper .initial-setup-container {
+.dev-step-initial-setup {
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -33,28 +34,27 @@
   width: 100%;
   height: 100%;
 }
-.device-stepper .all-groups-container {
+.dev-step-all-groups {
   display: flex;
   width: 100%;
   height: 100%;
   text-align: center;
 }
-.all-groups-container .type-groups-container,
-.all-groups-container .sub-type-groups-container {
+.dev-step-type-groups-contn,
+.dev-step-sub-type-groups-contn {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-.all-groups-container .type-groups-container {
+.dev-step-type-groups-contn {
   align-items: center;
   width: 260px;
   border-right: var(--dashed-border-basic);
 }
-.all-groups-container .sub-type-groups-container {
+.dev-step-sub-type-groups-contn {
   width: 100%;
 }
-.all-groups-container .type-groups-title,
-.all-groups-container .sub-type-groups-title {
+.dev-step-groups-title {
   font-size: 1.1rem;
   width: 100%;
   font-weight: 600;
@@ -62,26 +62,26 @@
   padding: 0.5rem 0;
   border-bottom: var(--dashed-border-basic);
 }
-.all-groups-container .type-groups,
-.all-groups-container .sub-type-groups {
+.dev-step-type-groups,
+.dev-step-sub-type-groups {
   display: flex;
   width: 100%;
   align-items: center;
   overflow-y: auto;
   padding: 0.5rem 0;
 }
-.all-groups-container .type-groups {
+.dev-step-type-groups {
   flex-direction: column;
   gap: 0.5rem;
 }
-.all-groups-container .sub-type-groups {
+.dev-step-sub-type-groups {
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
   padding: 0.5rem;
 }
-.all-groups-container .type-group,
-.all-groups-container .sub-type-group {
+.dev-step-type-group,
+.dev-step-sub-type-group {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -94,56 +94,55 @@
   width: 130px;
   font-size: 1rem;
 }
-.type-group svg,
-.sub-type-group svg {
+.dev-step-type-group svg,
+.dev-step-sub-type-group svg {
   width: 40px;
   height: 40px;
 }
-.all-groups-container .type-group-selected,
-.all-groups-container .sub-type-group-selected {
+.dev-step-type-group-selected,
+.dev-step-sub-type-group-selected {
   color: var(--hover-color);
   border-color: var(--hover-color);
 }
-.all-groups-container .empty-sub-type-groups {
+.dev-step-empty-sub-type-groups {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
 }
-.empty-sub-type-groups p {
+.dev-step-empty-sub-type-groups p {
   font-size: 1.2rem;
   color: black;
   width: 100%;
 }
-.device-stepper .device-config-container {
+.dev-step-device-config {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   width: 100%;
   height: 100%;
 }
-.device-config-container .sub-device-container,
-.device-config-container .select-group-container {
+.dev-step-sub-device-contn,
+.dev-step-select-group-contn {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 1rem;
+  padding: 0.5rem;
   max-width: 515px;
 }
-.device-config-container .sub-device-container {
+.dev-step-sub-device-contn {
   border-bottom: var(--dashed-border-basic);
 }
-.device-config-container .sub-device-container-hidden {
+.dev-step-sub-device-contn-hidden {
   display: none;
 }
-.device-stepper .buttons {
+.dev-step-buttons {
   margin-top: 0.5rem;
   width: 100%;
   display: flex;
   gap: 2rem;
 }
-.device-stepper .summarised-data-container {
+.dev-step-summar-data-contn {
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -151,56 +150,56 @@
   width: 100%;
   height: 100%;
 }
-.summarised-data-container .summarised-data {
+.dev-step-summar-data {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 100%;
   height: 100%;
 }
-.summarised-title {
+.dev-step-summar-title {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
   font-weight: 600;
 }
-.summarised-data-row {
+.dev-step-summar-data-row {
   display: flex;
   align-items: center;
   gap: 3px;
   width: 100%;
 }
-.summarised-data-row p {
+.dev-step-summar-data-row p {
   word-wrap: break-word;
   max-width: 200px;
 }
-.summarised-data-row svg {
+.dev-step-summar-data-row svg {
   width: 30px;
   height: 30px;
 }
-.summarised-attributes-row {
+.dev-step-summar-attr-row {
   align-items: flex-start;
   text-transform: capitalize;
 }
-.summarised-attributes {
+.dev-step-summar-attr {
   display: flex;
   flex-direction: column;
   margin-top: -1px;
 }
-.attribute-data-row {
+.dev-step-attribute-data-row {
   display: flex;
   align-items: center;
   gap: 3px;
   width: 100%;
 }
-.attribute-data-row p {
+.dev-step-attribute-data-row p {
   text-transform: lowercase;
 }
-.attribute-data-row p::first-letter {
+.dev-step-attribute-data-row p::first-letter {
   text-transform: uppercase;
 }
-.previous-steps-required-container {
+.dev-step-prev-steps-required {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -208,7 +207,7 @@
   height: 100%;
   font-size: 1.2rem;
 }
-.result-message-container {
+.dev-step-res-msg-contn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -216,60 +215,48 @@
   width: 100%;
 }
 @media (max-width: 768px) {
-  .device-stepper {
-    padding: 0;
-  }
-  .device-stepper-container {
+  .dev-step-contn {
     padding: 0.5rem;
     padding-left: 0;
     background-color: white;
   }
-  .device-stepper .content-container {
+  .dev-step {
+    padding: 0;
+  }
+  .dev-step-content {
     height: 85%;
     max-height: 440px;
   }
-  .all-groups-container .type-groups-container {
+  .dev-step-type-groups-contn {
     width: 180px;
   }
-  .sub-type-groups-container .sub-type-groups {
+  .dev-step-sub-type-groups {
     gap: 0.5rem;
   }
-  .all-groups-container .type-groups-title,
-  .all-groups-container .sub-type-groups-title {
+  .dev-step-groups-title {
     font-size: 1rem;
   }
-  .all-groups-container .type-group p,
-  .all-groups-container .sub-type-group p {
+  .dev-step-type-group p,
+  .dev-step-sub-type-group p {
     font-size: 0.75rem;
   }
-  .all-groups-container .type-group svg,
-  .all-groups-container .sub-type-group svg {
+  .dev-step-type-group svg,
+  .dev-step-sub-type-group svg {
     width: 35px;
     height: 35px;
   }
-  .all-groups-container .type-group,
-  .all-groups-container .sub-type-group {
+  .dev-step-type-group,
+  .dev-step-sub-type-group {
     width: 90px;
   }
-  .empty-sub-type-groups p {
+  .dev-step-empty-sub-type-groups p {
     font-size: 1rem;
   }
-  .device-config-container .sub-device-container,
-  .device-config-container .select-group-container {
+  .dev-step-sub-device-contn,
+  .dev-step-select-group-contn {
     max-width: 350px;
   }
-  .summarised-data-container .summarised-data {
+  .dev-step-summar-data {
     gap: 0.5rem;
   }
-}
-
-/* overwrite primereact default stepper styles*/
-.p-stepper.p-stepper-vertical .p-stepper-panel:last-of-type .p-stepper-content {
-  padding-left: 1.4rem;
-}
-.p-stepper-title {
-  font-size: 1.3rem;
-}
-.p-stepper.p-stepper-vertical .p-stepper-panel .p-stepper-separator {
-  margin-inline-start: 0.8rem;
 }
