--- a/src/components/DeviceComponents/Device/Device.css
+++ b/src/components/DeviceComponents/Device/Device.css
@@ -1,15 +1,16 @@
 .device {
+  display: flex;
+  flex-direction: column;
   width: 340px;
-  min-height: 6rem;
+  min-height: 120px;
   position: relative;
   background-color: white;
-  border-radius: 9px;
-  padding: 0.5rem;
+  border-radius: 8px;
+  padding: 8px;
   box-shadow: var(--box-shadow-default);
   text-align: center;
   transition: all 0.4s;
 }
-
 .device-top {
   display: flex;
   align-items: flex-start;
@@ -23,17 +24,14 @@
 }
 .icon-expand {
   transition: all 0.5s;
-  padding: 0.2rem;
-  margin-left: -0.5rem;
+  padding: 0;
 }
 .icon-expand-rotated {
   transform: rotate(180deg);
 }
 .device-img {
-  min-height: 40px;
-  max-height: 80px;
-  max-width: 80px;
-  min-width: 40px;
+  height: 75px;
+  width: 75px;
   margin: 0;
   padding: 0;
   user-select: none;
@@ -53,7 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 8rem;
+  width: 130px;
   height: 100%;
 }
 .device-info * {
@@ -62,8 +60,8 @@
   display: inline-block;
 }
 .device-info h3 {
-  font-size: 1.35rem;
-  width: 130px;
+  font-size: 21px;
+  width: 100%;
   height: 80px;
   word-wrap: break-word;
   font-weight: 400;
@@ -84,8 +82,12 @@
   font-style: oblique;
 }
 .fav-icon {
-  margin-top: 0.3rem;
-  margin-left: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  padding: 0;
 }
 .fav-icon:hover {
   cursor: pointer;
@@ -137,7 +139,7 @@
   font-style: italic;
 }
 
-.device-expand {
+.device-details-button {
   position: absolute;
   bottom: 0.2rem;
   right: 0.4rem;
@@ -147,7 +149,7 @@
   justify-content: center;
   transition: all 0.2s ease-in-out;
 }
-.device-expand:hover {
+.device-details-button:hover {
   color: var(--hover-color);
 }
 
