--- a/src/components/DeviceComponents/Device/SmartDoorSensor/SmartDoorSensor.css
+++ b/src/components/DeviceComponents/Device/SmartDoorSensor/SmartDoorSensor.css
@@ -4,45 +4,35 @@
   width: 100%;
   background: transparent;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   min-height: 120px;
   overflow: hidden;
 }
-.display-status {
+.door-status-container {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 0.3rem;
+  gap: 0.3rem;
 }
-.display-status p {
+.door-status-container p {
   margin: 0;
-  margin-left: 0.3rem;
   font-size: 1.5rem;
   font-weight: 600;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   transition: all 0.3s ease-in-out;
 }
-.door-sensor-image {
+.door-image-container {
   display: flex;
   width: 100%;
   align-items: flex-end;
   justify-content: center;
-}
-.door-main-module {
-  height: 130px;
   transition: all 0.6s ease-in-out;
 }
-.door-secondary-module {
-  height: 80px;
-  transition: all 0.6s ease-in-out;
-}
-.door-sensor-image-item img {
-  height: 100%;
-}
-.switch-direction-btn {
+.door-switch-direction-btn {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
@@ -54,10 +44,10 @@
   align-items: center;
   justify-content: center;
 }
-.switch-direction-btn:hover {
+.door-switch-direction-btn:hover {
   background-color: #e7e7e78f;
   cursor: pointer;
 }
-.switch-direction-btn:active {
+.door-switch-direction-btn:active {
   background-color: #d8d8d8;
 }
