--- a/src/components/DeviceComponents/Device/SmartSwitch/SmartSwitch.css
+++ b/src/components/DeviceComponents/Device/SmartSwitch/SmartSwitch.css
@@ -18,17 +18,31 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 200px;
+  min-height: 140px;
+  max-height: 200px;
 }
 .power-buttons {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
   padding: 0 1rem;
 }
-
+/* =====================================================*/
+.energy-today {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 190px;
+  height: 50px;
+  background-color: transparent;
+  gap: 0.5rem;
+}
+.energy-today p {
+  margin: 0;
+  font-size: 2.5rem;
+}
 /* =====================================================*/
 .sensor-container {
   display: flex;
@@ -53,45 +67,6 @@
   align-items: center;
   width: 7rem;
 }
-.sensor img {
-  width: 30px;
-}
 .sensor-item p {
   margin: 0;
-}
-
-/* =====================================================*/
-.energy-today h1 {
-  background-color: transparent;
-}
-.energy-today {
-  background-color: transparent;
-  display: flex;
-  width: 12rem;
-  height: 3rem;
-  align-items: center;
-  justify-content: center;
-  margin-right: -1rem;
-  /* border: 3px solid red; */
-}
-.energy-today p {
-  margin-left: 0.5rem;
-  font-size: 2rem;
-}
-.energy-today h1 {
-  font-size: 2.5rem;
-  font-weight: lighter;
-}
-/* =====================================================*/
-.current-time {
-  background-color: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.current-time p {
-  background-color: transparent;
-  color: rgb(151, 148, 148);
-  font-size: 1rem;
-  margin: 0.3em;
 }
