--- a/src/components/DeviceComponents/Device/SmartTempSensor/SmartTempSensor.css
+++ b/src/components/DeviceComponents/Device/SmartTempSensor/SmartTempSensor.css
@@ -1,25 +1,33 @@
 .smart-temp-sensor {
+  position: relative;
   width: 100%;
-  padding: 2rem 3rem;
-  padding-left: 4rem;
+  min-height: 120px;
   background: transparent;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  min-height: 120px;
-  position: relative;
-}
-.temp-sensor-item {
-  width: 150px;
-  display: flex;
   align-items: center;
-  margin: 1rem 0.5rem;
+  justify-content: center;
 }
-.temp-sensor-item p {
-  margin: 0 0.4rem;
-  font-size: 2rem;
-  font-weight: 600;
+.temp-items {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
 }
 .temp-item {
-  margin-left: 25px;
+  display: flex;
+  align-items: center;
+}
+.temp-item-icon {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.temp-item p {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 600;
 }
