css changes, AlarmSiren -> SirenAlarm, etc

--- a/src/components/DeviceComponents/Device/SmartLed/PaletteItem/PaletteItem.css
+++ b/src/components/DeviceComponents/Device/SmartLed/PaletteItem/PaletteItem.css
@@ -10,10 +10,11 @@
   position: relative;
   width: 40px;
   height: 40px;
+  display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 6px;
   overflow: hidden;
 }
 .palette-box-add {
