--- a/src/components/DeviceComponents/Device/SmartLed/SmartLed.css
+++ b/src/components/DeviceComponents/Device/SmartLed/SmartLed.css
@@ -15,50 +15,45 @@
 }
 .smart-led-tab {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
+  align-items: center;
+  justify-content: space-around;
 }
 .custom-tabs {
-  margin-top: 0.5rem;
+  margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: #cccccc7e;
   width: 100%;
-  padding: 0 0.3rem;
-  padding-bottom: 0.4rem;
-  border-radius: 8px 8px 0 0;
+  height: 35px;
+  border-radius: 6px;
+  border: 1px solid black;
+  overflow: hidden;
+}
+.custom-tab-middle {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 }
 .custom-tab {
+  min-width: 100px;
+  flex-grow: 1;
+  height: 100%;
   display: flex;
   align-items: center;
-  font-size: 1rem;
-  padding: 0.2rem 0.7rem;
-  border-radius: 0 0 8px 8px;
-  font-weight: 600;
+  justify-content: center;
+  gap: 0.2rem;
   transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 .custom-tab p {
-  margin: 0 0.1rem;
   color: black;
-}
-.custom-tab:hover {
-  cursor: pointer;
-  color: var(--hover-color);
+  font-weight: 600;
+  font-size: 14px;
 }
 .active-tab {
-  background-color: white;
-  color: blue;
-}
-.active-tab .cold-text {
-  color: blue;
-}
-.active-tab .warm-text {
-  color: gold;
-}
-.cold-warm-tab label {
-  margin-bottom: 0.3rem;
+  background-color: var(--hover-color-tran);
 }
 .bulb-item {
   width: 100%;
@@ -79,37 +74,36 @@
   background-color: transparent;
   transition: all 0.4s ease-in-out;
 }
-
 .slider-item {
   width: 100%;
-  margin: 0.5rem 0rem;
-  padding: 0 0.2rem;
   display: flex;
-  gap: 0.3rem;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-around;
 }
 .cold-warm-tab .slider-item {
   margin: 1rem 0;
 }
-
-.palette-controll-item {
+.palette-control {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  margin: 0;
-  margin-top: 0.3rem;
+  align-items: center;
+  justify-content: space-around;
 }
-
+.palette-control-item {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+}
 .palette-speed {
   gap: 0.5rem;
 }
-
 .palette-colors {
-  align-items: center;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 .palette-buttons {
   flex-direction: row;
