--- a/src/components/DeviceComponents/Device/SmartLed/SmartLed.css
+++ b/src/components/DeviceComponents/Device/SmartLed/SmartLed.css
@@ -56,11 +56,12 @@
   background-color: var(--hover-color-tran);
 }
 .bulb-item {
-  width: 100%;
   margin-bottom: -0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #ccc;
+  border-radius: 50%;
 }
 .bulb-item-icon {
   display: flex;
@@ -79,6 +80,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 5px;
 }
 .cold-warm-tab .slider-item {
   margin: 1rem 0;
@@ -97,9 +99,7 @@
   flex-direction: column;
   width: 100%;
 }
-.palette-speed {
-  gap: 0.5rem;
-}
+
 .palette-colors {
   flex-direction: row;
   align-items: center;
@@ -116,4 +116,12 @@
 }
 .palette-btn-hovered {
   cursor: pointer;
+}
+
+.smart-led-picker-button {
+  position: relative;
+  width: 100%;
+  height: 20px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
