--- a/src/components/DeviceComponents/Device/Device.css
+++ b/src/components/DeviceComponents/Device/Device.css
@@ -6,6 +6,7 @@
   position: relative;
   background-color: white;
   border-radius: 8px;
+  border: 1px solid #ccc;
   padding: 8px;
   box-shadow: var(--box-shadow-default);
   text-align: center;
@@ -139,20 +140,15 @@
   font-style: italic;
 }
 
-.device-details-button {
+.device-right-icons {
   position: absolute;
-  bottom: 0.2rem;
-  right: 0.4rem;
-  border: none;
+  bottom: 0;
+  right: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all 0.2s ease-in-out;
+  gap: 8px;
 }
-.device-details-button:hover {
-  color: var(--hover-color);
-}
-
 .final-device {
   position: relative;
   display: flex;
