--- a/src/components/DeviceComponents/DeletedDevices/DeletedDevices.css
+++ b/src/components/DeviceComponents/DeletedDevices/DeletedDevices.css
@@ -1,99 +1,49 @@
 .deleted-devices-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   position: fixed;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 1rem;
+  right: 1rem;
   z-index: 2;
 }
-.deleted-devices-outside {
-  padding: 0.5rem;
-  background-color: white;
-  border: 1px solid #ccc;
-  box-shadow: var(--box-shadow-default);
-  margin-bottom: 1rem;
-  border-radius: 10px;
-  width: 100vw;
-  max-width: 340px;
-  max-height: 350px;
-  transition: all 0.3s ease-in-out;
-  z-index: 1;
-  position: relative;
-  visibility: visible;
+.deleted-devices-content {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-.deleted-devices-outside-hidden {
-  overflow: hidden;
-  visibility: hidden;
-  width: 0;
-  max-width: 0;
-  max-height: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 .deleted-devices {
+  margin-top: 1rem;
   overflow: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 0.2rem;
+  gap: 15px;
   width: 100%;
-  max-height: 210px;
-  min-height: 120px;
-  opacity: 1;
+  max-height: 300px;
+  min-height: 150px;
   margin-bottom: 0.5rem;
-  transition: opacity 0.3s ease-in-out;
-}
-.deleted-devices-hidden {
-  opacity: 0;
-  overflow: hidden;
-}
-.deleted-devices::before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  bottom: -5px;
-  right: 40px;
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  transform: rotate(45deg);
-  background-color: white;
-}
-.deleted-devices img {
-  height: 150px;
-  align-self: center;
-  justify-self: center;
 }
 .deleted-devices-toolbar {
-  border-top: 1px solid black;
+  width: 100%;
   display: flex;
   align-items: center;
-  width: 100%;
   justify-content: space-between;
-  padding-top: 0.5rem;
-  transition: opacity 0.5s ease-in-out;
+  border-top: 1px solid black;
+  padding-top: 0.8rem;
 }
 .deleted-devices-toolbar-hidden {
   display: none;
-}
-.deleted-devices-toolbar-hidden-transition {
-  opacity: 0;
 }
 .deleted-devices-toolbar-item {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 4px;
   padding: 0.1rem 0.4rem;
   border: 1px solid black;
-  border-radius: 4px;
   background-color: transparent;
 }
 .deleted-devices-toolbar-item p {
@@ -125,16 +75,10 @@
   background-color: var(--bck-grey-hover-color);
   cursor: pointer;
 }
-.recycle-bin img {
-  width: 100%;
-}
 
 @media (max-width: 968px) {
   .deleted-devices-container {
     bottom: 1rem;
     right: 1rem;
-  }
-  .recycle-bin {
-    width: 70px;
   }
 }
