--- a/src/components/SceneComponents/Scene/DeviceScene/DeviceScene.css
+++ b/src/components/SceneComponents/Scene/DeviceScene/DeviceScene.css
@@ -1,12 +1,13 @@
 .device-scene {
+  position: relative;
   display: flex;
+  flex-direction: column;
   background-color: transparent;
   width: 100%;
-  flex-direction: column;
   padding: 0.7rem 0;
-  position: relative;
-  height: 160px;
-  margin-top: 0.5rem;
+  height: 170px;
+  align-items: center;
+  justify-content: center;
 }
 .device-scene-top {
   width: 100%;
@@ -21,7 +22,8 @@
   justify-content: center;
   width: 140px;
 }
-.device-scene-name-img {
+.device-scene-data {
+  position: relative;
   width: 100%;
   height: 100px;
   display: flex;
@@ -29,11 +31,11 @@
   align-items: center;
   justify-content: center;
 }
-.device-scene-name-img svg {
-  max-width: 70px;
-  max-height: 70px;
+.device-scene-data svg {
+  width: 70px;
+  height: 70px;
 }
-.device-scene-name-img p {
+.device-scene-data p {
   width: 140px;
   font-size: 1rem;
   font-weight: 600;
@@ -46,8 +48,16 @@
   overflow: hidden;
   text-align: center;
 }
-.device-scene-text {
-  border: 1px solid rgb(173, 173, 173);
+.device-scene-connection-type {
+  position: absolute;
+  bottom: 0;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.device-scene-event {
+  border: 1px solid black;
   border-radius: 4px;
   margin-top: 0.5rem;
   display: flex;
@@ -57,9 +67,8 @@
   height: 30px;
   gap: 3px;
 }
-.device-scene-text p {
+.device-scene-event p {
   font-size: 1rem;
   font-weight: 600;
   margin: 0;
-  color: #6a6a6a;
 }
